# goobox-nodes

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.j2  LICENSE  README.md  alembic.ini  app.py  constraints.txt  docker-compose-testing.yml  docker-compose.yml  example.md  make  nginx.conf  pyproject.toml  requirements.txt  requirements_test.txt  run  setup.cfg
.circleci/: config.yml
core/: sqlalchemy.py
core/components/: id_generator.py
core/models/: node.py
goobox_nodes/: __main__.py  app.py  components.py  resources.py  settings.py
goobox_nodes/core/: exceptions.py
goobox_nodes/core/components/: sia_api_client.py
goobox_nodes/migrations/versions/: 1d0cfdbf3292_sia_node.py
goobox_nodes/nodes/: app.py  models.py  resources.py  schemas.py
goobox_nodes_api/: __main__.py  app.py  components.py  environment.py  resources.py  routes.py  settings.py
migrations/: env.py
migrations/versions/: 1d0cfdbf3292_sia_node.py  9acc5e8dedb9_create_storj_node.py  f7ef6c6787fe_sia_node.py
nodes/: app.py  models.py  resources.py  schemas.py
sia/: app.py  models.py  resources.py  views.py
storj_node/: models.py  routes.py  types.py  views.py
tests/unit/: conftest.py
tests/unit/core/components/: test_sia_api_client.py
tests/unit/nodes/: test_resources.py
tests/unit/sia/: test_resources.py
