[metadata]
description-file = README.md
license-file = LICENSE

[tool:pytest]
minversion = 3
addopts = --cov-config=setup.cfg --cov=.
norecursedirs =
	*settings*
	*urls*
	.tox*
	*docs*

[coverage:run]
source = .
branch = True
omit =
	*settings*
	*__init__.py
	*__main__.py
	*urls*
	.tox*
	*tests*
	*/migrations/*
	*apps.py
	run*
	build.py

[coverage:report]
show_missing = True
ignore_errors = True
fail_under = 90
exclude_lines =
	noqa
	pragma: no cover
	pass
	\.\.\.

	raise AssertionError
	raise NotImplementedError

	if 0:
	if __name__ == .__main__.:

	def __repr__
	if cls\.debug
	if settings\.DEBUG

[coverage:paths]
source = ./

[coverage:html]
directory = .test_report/coverage_html/

[coverage:xml]
output = .test_report/coverage.xml

[isort]
atomic = true
multi_line_output = 3
include_trailing_comma = True
not_skip = __init__.py
line_length = 120
skip_glob =
	*/.tox/**
	*/doc/**
	*/build/**
	*/dist/**
known_third_party = starlette,starlette_api,marshmallow,pytest

[flake8]
max-line-length = 120
ignore = N804,W503
exclude =
	doc/*,
	build/*,
	dist/*,
	.tox/*
max-complexity = 10

